# john_jay_software_solutions

./: .gitignore  pyproject.toml  requirements.txt  scrap.txt  tester.json
assets/: data_manager_v2_config.json  export_test_config.json  test_data_manager_config.json
assets/data_manager/: compare.json  compile.json  config.json  export.json  misc.json  schema.json  sources.json
cayuse_feedback_modifier/: index.py  index_v1.py  notes.txt  requirements.txt
cayuse_feedback_modifier/env/: .env.template
cayuse_feedback_modifier/src/: index.py  index_template.py  process_class.py  utils.py
cayuse_template_generator/: notes.txt
cayuse_template_generator/src/: index.py
env/: .env.template
notes/: db_tables.json
src/: all_tables.xlsx  index.py  tester.txt
src/blueprint_manager/: __init__.py  cli.py  compare_engine.py  compile_engine.py  config_loader.py  enrich.py  exceptions.py  export_engine.py  expr.py  filters.py  fuzzy.py  models.py  plugins.py  pyproject.toml  textnorm.py  transforms.py
src/blueprint_manager/docs/: data_manager_starter_guide.md  example.json  todo.txt
src/blueprint_manager/sources/: access_adapter.py  base.py  excel_adapter.py  inline_adapter.py
src/blueprint_manager/utils/: output_resolve.py  type_enforce.py
src/cli_manager/: index.py
src/content/: SP_Proposals_2025_Jul_21_search_params.json  latest_test.json  prod_temp_09_04_25.json  proposal_data_set.py  search_param_template.json  sp_proposal_data_search_params.json
src/logging_manager/: __init__.py  config.py  context.py  formatters.py  handlers.py
src/modules/: column_manager.py  content_manager.py  log_manager.py  log_manager_legacy.py  logger.py  mutation.py  script_logger.py  test_env.py  utils.py
src/scripts/: __init__.py  fix_template.py  generate_template.py  manage_attachments.py  manage_database.py  manage_migration.py  manage_reports.py  manage_workbook.py  test_env.py
src_legacy/: index.py
src_legacy/content/: checker_test.json  modularity_test.json
src_legacy/modules/: consistency_checker.py  content_manager.py  record_manager.py  utils.py
src_legacy/scripts/: manage_attachments.py  manage_database.py  manage_migration.py  manage_reports.py  manage_workbook.py  test_env.py
(+41 files in other folders)
