[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manager"
version = "0.1.0"
description = "Dataset manager for multi-source ingest, compile, compare, and export"
readme = "README.md"
authors = [{name="Rey Flores"}]
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.3",
    "botocore==1.37.32",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.9.0",
    "jmespath==1.0.1",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "prompt-toolkit==3.0.51",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pyodbc==5.2.0; platform_system == \"Windows\"",
    "pypdf==5.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2025.1",
    "rapidfuzz==3.12.2",
    "s3transfer==0.11.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13"
]

[project.scripts]
blueprint-manager = "blueprint_manager.cli:main"
cli-manager = "cli_manager:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"blueprint_manager" = ["py.typed"]